Refactoring environment variables, adding information in .env.example, separating weight and level routes, separating weight controllers, adjusting error returns to Portuguese and removing return from routes that don't need it

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# PORT=sensor port
-# ENDPOINT=aws endpoint
-# KEY=path of the file containing the aws key
-# CERTIFICATE=path of the file containing the aws certificate
-# CA=path of the file that contains the aws root ca
+PORT=3333
+AWS_ENDPOINT="example.amazonaws.com"
+AWS_KEY="C:/Users/.../.../private.pem.key"
+AWS_CERTIFICATE="C:/Users/.../.../certificate.pem.crt"
+AWS_CA="C:/Users/.../.../AmazonRootCA1.pem"
+TRASH_MAX_LEVEL_CAPACITY=27
